--- a/nlp/admin/web/src/app/applications/application/application.component.html
+++ b/nlp/admin/web/src/app/applications/application/application.component.html
@@ -14,63 +14,64 @@
   ~ limitations under the License.
   -->
 
-<md-card>
-  <md-card-title>
+<mat-card>
+  <mat-card-title>
     <span *ngIf="applications.length !== 0">NLP Application <span *ngIf="application && application?.name?.length !== 0">"{{application?.name}}"</span></span>
-  </md-card-title>
-  <md-card-content *ngIf="application">
-    <md-card>
-      <md-input-container>
-        <input mdInput placeholder="New application name" [(ngModel)]="application.name"
+  </mat-card-title>
+  <mat-card-content *ngIf="application">
+    <mat-card>
+      <mat-form-field>
+        <input matInput placeholder="New application name" [(ngModel)]="application.name"
                (keyup.enter)="saveApplication()">
-      </md-input-container>
-      <md-checkbox [(ngModel)]="application.mergeEngineTypes" md-tooltip="If selected, this option uses built-in entity models (like dates) in conjunction with standard NER">Use entity models</md-checkbox>
-      <md-checkbox *ngIf="!application.mergeEngineTypes" [(ngModel)]="application.useEntityModels" md-tooltip="If selected, built-in entity models results are provided only for info and potential entity disambiguation">Entity disambiguation only</md-checkbox>
-      <md-checkbox [(ngModel)]="application.supportSubEntities" md-tooltip="If selected, you can use subentities in your nlp models">Allow subentities</md-checkbox>
-    </md-card>
-    <md-card *ngIf="state.locales" class="locales">
-      <md-card-content *ngIf="application.supportedLocales.length !== 0">
-      <md-chip-list placeholder="Supported Locales">
-        <md-chip *ngFor="let locale of application.supportedLocales"
-                 mdTooltip="Delete locale"
+      </mat-form-field>
+      <mat-checkbox class="separator" [(ngModel)]="application.mergeEngineTypes" matTooltip="If selected, this option uses built-in entity models (like dates) in conjunction with standard NER">Use entity models</mat-checkbox>
+      <mat-checkbox class="separator" *ngIf="!application.mergeEngineTypes" [(ngModel)]="application.useEntityModels" matTooltip="If selected, built-in entity models results are provided only for info and potential entity disambiguation">Entity disambiguation only</mat-checkbox>
+      <mat-checkbox class="separator" [(ngModel)]="application.supportSubEntities" matTooltip="If selected, you can use subentities in your nlp models">Allow subentities</mat-checkbox>
+    </mat-card>
+    <mat-card *ngIf="state.locales">
+      <mat-card-content *ngIf="application.supportedLocales.length !== 0">
+      <mat-chip-list placeholder="Supported Locales">
+        <mat-chip *ngFor="let locale of application.supportedLocales"
+                 matTooltip="Delete locale"
                  [selected]="true"
                  (click)="removeLocale(locale)"
                  [color]="accent">
           {{state.localeName(locale)}}
-        </md-chip>
-      </md-chip-list>
-      </md-card-content>
-      <md-card-actions>
-        <md-select (change)="addLocale($event.value)" [ngModel]="newLocale" placeholder="Add new locale"
-                   class="mat-chip-list-stacked select-locale">
-          <md-option *ngFor="let locale of state.locales"
+        </mat-chip>
+      </mat-chip-list>
+      </mat-card-content>
+      <mat-card-actions>
+        <mat-form-field class="locales">
+        <mat-select (selectionChange)="addLocale($event.value)" [ngModel]="newLocale" placeholder="Add new locale">
+          <mat-option *ngFor="let locale of state.locales"
                      [value]="locale.first">{{ locale.second }}
-          </md-option>
-        </md-select>
-      </md-card-actions>
-    </md-card>
-    <md-card>
-      <label for="engines">NLP engine:</label>
-      <md-radio-group id="engines" [(ngModel)]="nlpEngineType">
-        <md-radio-button *ngFor="let engine of state.supportedNlpEngines" [value]="engine.name">
+          </mat-option>
+        </mat-select>
+        </mat-form-field>
+      </mat-card-actions>
+    </mat-card>
+    <mat-card>
+      <label for="engines">NLP engine:&nbsp;</label>
+      <mat-radio-group id="engines" [(ngModel)]="nlpEngineType">
+        <mat-radio-button *ngFor="let engine of state.supportedNlpEngines" [value]="engine.name">
           {{engine.name}}
-        </md-radio-button>
-      </md-radio-group>
-    </md-card>
+        </mat-radio-button>
+      </mat-radio-group>
+    </mat-card>
 
     <tock-application-advanced-options *ngIf="!newApplication" [application]="application"></tock-application-advanced-options>
 
-  </md-card-content>
-  <md-card-actions>
-    <button *ngIf="applications.length !== 0" (click)="cancel()" md-button>Cancel</button>
-    <button *ngIf="!newApplication" md-raised-button (click)="deleteApplication()" color="warn">Delete Application
+  </mat-card-content>
+  <mat-card-actions>
+    <button *ngIf="applications.length !== 0" (click)="cancel()" mat-button>Cancel</button>
+    <button *ngIf="!newApplication" mat-raised-button (click)="deleteApplication()" color="warn">Delete Application
     </button>
-    <button *ngIf="newApplication" md-raised-button (click)="saveApplication()" color="primary">Create new Application
+    <button *ngIf="newApplication" mat-raised-button (click)="saveApplication()" color="primary">Create new Application
     </button>
-    <button *ngIf="!newApplication" md-raised-button (click)="saveApplication()" color="primary">Update Application
+    <button *ngIf="!newApplication" mat-raised-button (click)="saveApplication()" color="primary">Update Application
     </button>
-  </md-card-actions>
-</md-card>
+  </mat-card-actions>
+</mat-card>
 
 
 
