--- a/nlp/admin/web/src/app/nlp-admin-app.component.css
+++ b/nlp/admin/web/src/app/nlp-admin-app.component.css
@@ -49,7 +49,6 @@
   filter: none;
   font-weight: normal;
   height: auto;
-  line-height: inherit;
   margin: 0;
   min-width: 0;
   padding: 0;
@@ -59,6 +58,12 @@
 
 .select-application{
   width:200px;
+  font-size: smaller;
+}
+
+.select-locale{
+  width:100px;
+  font-size: smaller;
 }
 
 .main {
