--- a/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.css
+++ b/nlp/admin/web/src/app/sentence-analysis/sentence-analysis.component.css
@@ -27,8 +27,6 @@
   padding-top: 15px;
 }
 
-
-
 .entity-list {
   width:40%;
   font-size: x-large;
@@ -38,6 +36,11 @@
 
 .intent {
   width:250px;
+}
+
+.locale {
+  width:100px;
+  padding-left: 10px;
 }
 
 .probability {
