--- a/nlp/admin/web/src/app/shared/confirm-dialog/confirm-dialog.component.html
+++ b/nlp/admin/web/src/app/shared/confirm-dialog/confirm-dialog.component.html
@@ -14,9 +14,9 @@
   ~ limitations under the License.
   -->
 
-<h1 md-dialog-title>{{data.title}}</h1>
-<div md-dialog-content>{{data.subtitle}}</div>
-<div md-dialog-actions>
-  <button md-button (click)="dialogRef.close('cancel')">Cancel</button>
-  <button md-button (click)="dialogRef.close(data.action.toLowerCase())">{{data.action}}</button>
+<h1 mat-dialog-title>{{data.title}}</h1>
+<div mat-dialog-content>{{data.subtitle}}</div>
+<div mat-dialog-actions>
+  <button mat-button (click)="dialogRef.close('cancel')">Cancel</button>
+  <button mat-button (click)="dialogRef.close(data.action.toLowerCase())">{{data.action}}</button>
 </div>
