--- a/nlp/admin/web/src/app/test/test-entity-error.component.html
+++ b/nlp/admin/web/src/app/test/test-entity-error.component.html
@@ -16,60 +16,60 @@
 
 <div>
 
-  <md-table #table [dataSource]="dataSource">
+  <mat-table #table [dataSource]="dataSource">
 
-    <ng-container mdColumnDef="text">
-      <md-header-cell *mdHeaderCellDef> Original </md-header-cell>
-      <md-cell *mdCellDef="let row"> <tock-highlight fontSize="smaller" [sentence]="row.originalSentence" [readOnly]="true" [displayActions]="false"></tock-highlight>
-      </md-cell>
+    <ng-container matColumnDef="text">
+      <mat-header-cell *matHeaderCellDef> Original </mat-header-cell>
+      <mat-cell *matCellDef="let row"> <tock-highlight fontSize="smaller" [sentence]="row.originalSentence" [readOnly]="true" [displayActions]="false"></tock-highlight>
+      </mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="intent">
-      <md-header-cell *mdHeaderCellDef> Intent </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{intentName(row)}}</md-cell>
+    <ng-container matColumnDef="intent">
+      <mat-header-cell *matHeaderCellDef> Intent </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{intentName(row)}}</mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="error">
-      <md-header-cell *mdHeaderCellDef> Last Error </md-header-cell>
-      <md-cell *mdCellDef="let row"> <tock-highlight fontSize="smaller" [sentence]="row.sentence" [readOnly]="true" [displayActions]="false"></tock-highlight></md-cell>
+    <ng-container matColumnDef="error">
+      <mat-header-cell *matHeaderCellDef> Last Error </mat-header-cell>
+      <mat-cell *matCellDef="let row"> <tock-highlight fontSize="smaller" [sentence]="row.sentence" [readOnly]="true" [displayActions]="false"></tock-highlight></mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="count">
-      <md-header-cell *mdHeaderCellDef> Errors </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.count}} </md-cell>
+    <ng-container matColumnDef="count">
+      <mat-header-cell *matHeaderCellDef> Errors </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.count}} </mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="percent">
-      <md-header-cell *mdHeaderCellDef md-tooltip="(after first error)"> Test Errors / Tests  </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{(row.count/row.total)| percent:'1.0-2'}} </md-cell>
+    <ng-container matColumnDef="percent">
+      <mat-header-cell *matHeaderCellDef matTooltip="(after first error)"> Test Errors / Tests  </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{(row.count/row.total)| percent:'1.0-2'}} </mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="probability">
-      <md-header-cell *mdHeaderCellDef> Average Entity Error Probability </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.averageErrorProbability | percent:'1.0-2'}} </md-cell>
+    <ng-container matColumnDef="probability">
+      <mat-header-cell *matHeaderCellDef> Average Entity Error Probability </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.averageErrorProbability | percent:'1.0-2'}} </mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="firstErrorDate">
-      <md-header-cell *mdHeaderCellDef> Detection Date </md-header-cell>
-      <md-cell *mdCellDef="let row"> {{row.firstDetectionDate | amCalendar}} </md-cell>
+    <ng-container matColumnDef="firstErrorDate">
+      <mat-header-cell *matHeaderCellDef> Detection Date </mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.firstDetectionDate | amCalendar}} </mat-cell>
     </ng-container>
 
-    <ng-container mdColumnDef="actions">
-      <md-header-cell *mdHeaderCellDef> Actions </md-header-cell>
-      <md-cell *mdCellDef="let row">
-        <button md-icon-button (click)="validate(row)"><md-icon mdTooltip="Validate Entities" style="color:green">sentiment_very_satisfied</md-icon></button>
-        <button md-icon-button (click)="change(row)"><md-icon mdTooltip="Change the Entities" style="color:red">update</md-icon></button>
-      </md-cell>
+    <ng-container matColumnDef="actions">
+      <mat-header-cell *matHeaderCellDef> Actions </mat-header-cell>
+      <mat-cell *matCellDef="let row">
+        <button mat-icon-button (click)="validate(row)"><mat-icon matTooltip="Validate Entities" style="color:green">sentiment_very_satisfied</mat-icon></button>
+        <button mat-icon-button (click)="change(row)"><mat-icon matTooltip="Change the Entities" style="color:red">update</mat-icon></button>
+      </mat-cell>
     </ng-container>
 
-    <md-header-row *mdHeaderRowDef="displayedColumns"></md-header-row>
-    <md-row *mdRowDef="let row; columns: displayedColumns;"></md-row>
-  </md-table>
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+  </mat-table>
 
-  <md-paginator #paginator
+  <mat-paginator #paginator
                 [length]="dataSource.size"
                 [pageIndex]="0"
                 [pageSize]="10"
                 [pageSizeOptions]="[5, 10, 25, 100]">
-  </md-paginator>
+  </mat-paginator>
 </div>
